--- a/pages/aboutUs/aboutUs.html
+++ b/pages/aboutUs/aboutUs.html
@@ -1,27 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Carrusel</font></font></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Cambiar navegación">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hogar</font></font></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Enlace</font></font></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Desactivado</font></font></a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-        <button class="btn btn-outline-success" type="submit"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Buscar</font></font></button>
-      </form>
-    </div>
-  </div>
-</nav>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <title>Document</title>
 </head>
+<body>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Carrusel</font></font></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Cambiar navegación">
+        <span class="navbar-toggler-icon"></span>
+      </button> 
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hogar</font></font></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Enlace</font></font></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Desactivado</font></font></a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+          <button class="btn btn-outline-success" type="submit"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Buscar</font></font></button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+  <div class="row">
+    <div class="col-lg-4">
+      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Marcador de posición" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+      <h2 class="fw-normal"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hacerca de Gael</font></font></h2>
+      <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hola soy Gael tengo 13 Años y me respesento por ser muy fanatico del futboll y tambien de algunos videojuegos,esta aplicacion lo isimos con el proposito de ayudar  la gente enferma de obesidad,ojala que la disfruten y los dejo.</font></font></p>
+      <p><a class="btn btn-secondary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ver detalles »</font></font></a></p>
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Marcador de posición" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+      <h2 class="fw-normal"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hacerca de Yael</font></font></h2>
+      <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hola soy Edgar tengo 14 años lo que me identifica es el futbol y el boxeo mi proposito es que tengamos un mejor habito de alimentacion para asi estar mas sanos .</font></font></p>
+      <p><a class="btn btn-secondary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ver detalles »</font></font></a></p>
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Marcador de posición" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
+      <h2 class="fw-normal"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hacerca de Daneil</font></font></h2>
+      <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hola : soy Daniel Ornelas Vazquez tengo 14 años en ,y soy un alumno de Copilli, en el que vamos a hacer un proyecto de una pagina web . lo que me identifica es el futbol y los videojuegos mi pasion son los carros y my favorito es el porche 911 gt3 rexy    .</font></font></p>
+      <p><a class="btn btn-secondary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ver detalles »</font></font></a></p>
+    </div><!-- /.col-lg-4 -->
+  </div>
+</body>
+</html>
+
+<div class="row featurette">
+  <div class="col-md-7">
+    <h2 class="featurette-heading fw-normal lh-1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Hacerca de nosotros. </font></font><span class="text-body-secondary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">;).</font></font></span></h2>
+    <p class="lead"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">nosotros somo parte de un equipo que esta formado por Gael Casas,Daniel Ornelas y por ultimo Edarg Yael.Nosotros somo parte del Colegio Copilli,nuestro tema habla sobre la  obesidad que hay en mexico y talvez en otros paises del mundo en el que hablaremos tanto de la obesidad infatil y tambien la obesidad adultes.</font></font></p>
+  </div>
+  <div class="col-md-5">
+    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Marcador de posición: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+  </div>
+</div>
+
+<div class="row featurette">
+  <div class="col-md-7 order-md-2">
+    <h2 class="featurette-heading fw-normal lh-1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sí, es así de bueno. </font></font><span class="text-body-secondary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Compruébelo usted mismo.</font></font></span></h2>
+    <p class="lead"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">¿Otro featurette? Por supuesto. Más contenido de relleno aquí para darle una idea de cómo funcionaría este diseño con algo de contenido real del mundo real.</font></font></p>
+  </div>
+  <div class="col-md-5 order-md-1">
+    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Marcador de posición: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"></rect><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+  </div>
+</div>
+
+
+   
