--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -1,13 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <title>Document</title>
 </head>
 <body>
-    <h1>Ciencia de Alimentacion</h1>    
+  <header class="p-3 text-bg-dark custom-cursor-default-hover">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start custom-cursor-default-hover">
+        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Oreja"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="#" class="nav-link px-2 text-secondary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Home</font></font></a></li>
+          <li><a href="#" class="nav-link px-2 text-white custom-cursor-on-hover"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" class="custom-cursor-on-hover">Abut US</font></font></a></li>
+          <li><a href="#" class="nav-link px-2 text-white"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Scientist Of Alimentacion </font></font></a></li>
+          <li><a href="#" class="nav-link px-2 text-white custom-cursor-on-hover"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" class="custom-cursor-on-hover">configuracion </font></font></a></li>
+          <li><a href="#" class="nav-link px-2 text-white custom-cursor-on-hover"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" class="custom-cursor-on-hover">:/</font></font></a></li>
+        </ul>
+
+        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+          <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Buscar..." aria-label="Buscar">
+        </form>
+
+        <div class="text-end custom-cursor-default-hover">
+          <button type="button" class="btn btn-outline-light me-2 custom-cursor-on-hover"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" class="custom-cursor-on-hover">login</font></font></button>
+          <button type="button" class="btn btn-warning custom-cursor-on-hover"><font style="vertical-align: inherit;" class="custom-cursor-on-hover"><font style="vertical-align: inherit;" class="custom-cursor-on-hover">sing in </font></font></button>
+        </div>
+      </div>
+    </div>
+  </header>
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary custom-cursor-default-hover">
+    <div class="col-md-6 p-lg-5 mx-auto my-5 custom-cursor-default-hover">
+      <h1 class="display-3 fw-bold custom-cursor-default-hover"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" class="custom-cursor-default-hover"> La Ciencia De La Alientacion  </font></font></h1>
+      <h3 class="fw-normal text-muted mb-3 custom-cursor-default-hover"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" class="custom-cursor-default-hover">Apernde a comer saludable</font></font></h3>
+      <div class="d-flex gap-3 justify-content-center lead fw-normal">
+        <a class="icon-link" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+          Más información
+          </font></font><svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+        </a>
+        <a class="icon-link" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+          
+          </font></font><svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+        </a>
+      </div>
+    </div>
+    <div class="product-device shadow-sm d-none d-md-block custom-cursor-default-hover"></div>
+    <div class="product-device product-device-2 shadow-sm d-none d-md-block custom-cursor-default-hover"></div>
+  </div>
+ 
+  <div class="text-bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden custom-cursor-default-hover">
+    <div class="my-3 py-3 custom-cursor-default-hover">
+      <h2 class="display-5 custom-cursor-default-hover"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Produto Estrella</font></font></h2>
+      <p class="lead custom-cursor-default-hover"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Tenemos 2 productos saludables , esos son las gomitas saludables y galletas saludabels .</font></font></p>
+    </div>
+    <div class="bg-body-tertiary shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+  </div>
+   
+  <body>
+</html>
+
+
+<body> <div class="col-md-4 custom-cursor-default-hover">
+  <div class="position-sticky custom-cursor-default-hover" style="top: 2rem;">
+    <div class="p-4 mb-3 bg-body-tertiary rounded custom-cursor-default-hover">
+      <h4 class="fst-italic"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Acerca de</font></font></h4>
+      <p class="mb-0 custom-cursor-default-hover"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" class="custom-cursor-default-hover">Personaliza esta sección para contarles a tus visitantes un poco sobre tu publicación, autores, contenido o algo completamente diferente. Depende totalmente de ti.</font></font></p>
+    </div>
+
+    <div class="custom-cursor-default-hover">
+      <h4 class="fst-italic"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" class="custom-cursor-default-hover">Entradas recientes</font></font></h4>
+      <ul class="list-unstyled">
+        <li>
+          <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top custom-cursor-on-hover" href="#">
+            <svg class="bd-placeholder-img custom-cursor-on-hover" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777" class="custom-cursor-on-hover"></rect></svg>
+            <div class="col-lg-8 custom-cursor-on-hover">
+              <h6 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" class="custom-cursor-on-hover">Ejemplo de título de publicación de blog</font></font></h6>
+              <small class="text-body-secondary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">15 de enero de 2024</font></font></small>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
+            <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+            <div class="col-lg-8">
+              <h6 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Este es otro título de publicación de blog.</font></font></h6>
+              <small class="text-body-secondary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">14 de enero de 2024</font></font></small>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
+            <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+            <div class="col-lg-8">
+              <h6 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Título de publicación de blog más largo: ¡Éste tiene varias líneas!</font></font></h6>
+              <small class="text-body-secondary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">13 de enero de 2024</font></font></small>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="p-4">
+      <h4 class="fst-italic"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Archivo</font></font></h4>
+      <ol class="list-unstyled mb-0">
+              <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Marzo de 2021</font></font></a></li>
+              <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Febrero de 2021</font></font></a></li>
+               <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Enero de 2021</font></font></a></li>
+               <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Diciembre de 2020</font></font></a></li>
+                <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Noviembre 2020</font></font></a></li>
+                <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Octubre de 2020</font></font></a></li>
+               <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Septiembre de 2020</font></font></a></li>
+              <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Julio de 2020</font></font></a></li>
+                <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Junio ​​de 2020</font></font></a></li>
+        <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Mayo de 2020</font></font></a></li>
+        <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Abril 2020</font></font></a></li>
+      </ol>
+    </div>
+
+    <div class="p-4">
+      <h4 class="fst-italic"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">En otra parte</font></font></h4>
+      <ol class="list-unstyled">
+        <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">GitHub</font></font></a></li>
+        <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Gorjeo</font></font></a></li>
+        <li><a href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Facebook</font></font></a></li>
+      </ol>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
+  
